[gd_scene load_steps=11 format=3 uid="uid://clgis77b5672s"]

[ext_resource type="Script" uid="uid://btkvdebs4xs71" path="res://scenes/stages/stage_2.gd" id="1_vhmg7"]
[ext_resource type="PackedScene" uid="uid://b8d1p2nql8j7r" path="res://scenes/stages/parallax_background.tscn" id="2_x3wqt"]
[ext_resource type="Texture2D" uid="uid://dpmaqyeuenmrc" path="res://assets/Legacy-Fantasy - High Forest 2.3/Background/Parallax_Backgrounds/Free-futuristic-city-pixel-art-backgrounds/city 4/1.png" id="3_llf8k"]
[ext_resource type="Texture2D" uid="uid://bhlf8wdn5mlv3" path="res://assets/Legacy-Fantasy - High Forest 2.3/Background/Parallax_Backgrounds/Free-futuristic-city-pixel-art-backgrounds/city 4/2.png" id="4_roo8f"]
[ext_resource type="Texture2D" uid="uid://b2j5xwlf462bc" path="res://assets/Legacy-Fantasy - High Forest 2.3/Background/Parallax_Backgrounds/Free-futuristic-city-pixel-art-backgrounds/city 4/3.png" id="5_wvjco"]
[ext_resource type="Texture2D" uid="uid://n2k2bneny4sy" path="res://assets/Legacy-Fantasy - High Forest 2.3/Background/Parallax_Backgrounds/Free-futuristic-city-pixel-art-backgrounds/city 4/4.png" id="6_8rshe"]
[ext_resource type="Texture2D" uid="uid://d1a3imn4cx5fo" path="res://assets/Legacy-Fantasy - High Forest 2.3/Background/Parallax_Backgrounds/Free-futuristic-city-pixel-art-backgrounds/city 4/5.png" id="7_jj6c3"]
[ext_resource type="Texture2D" uid="uid://d3iqw0tt17ojq" path="res://assets/Legacy-Fantasy - High Forest 2.3/Background/Parallax_Backgrounds/Free-futuristic-city-pixel-art-backgrounds/city 4/6.png" id="8_awxa6"]
[ext_resource type="PackedScene" uid="uid://ckoi2bs7alwus" path="res://scenes/player/player.tscn" id="12_wvjco"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rshe"]
size = Vector2(3988, 20)

[node name="Stage_2" type="Node2D"]
script = ExtResource("1_vhmg7")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_x3wqt")]

[node name="SkyLayer" parent="ParallaxBackground" index="0"]
scale = Vector2(3.33969, 3.34325)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" parent="ParallaxBackground/SkyLayer" index="0"]
texture = ExtResource("3_llf8k")

[node name="SunLayer" parent="ParallaxBackground" index="1"]
scale = Vector2(3.33969, 3.34325)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" parent="ParallaxBackground/SunLayer" index="0"]
texture = ExtResource("4_roo8f")

[node name="CloudsLayer" parent="ParallaxBackground" index="2"]
scale = Vector2(3.33969, 3.34325)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" parent="ParallaxBackground/CloudsLayer" index="0"]
texture = ExtResource("5_wvjco")

[node name="TreesBackLayer" parent="ParallaxBackground" index="3"]
scale = Vector2(3.33969, 3.34325)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" parent="ParallaxBackground/TreesBackLayer" index="0"]
texture = ExtResource("6_8rshe")

[node name="TreesFrontLayer" parent="ParallaxBackground" index="4"]
scale = Vector2(3.33969, 3.34325)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" parent="ParallaxBackground/TreesFrontLayer" index="0"]
texture = ExtResource("7_jj6c3")

[node name="GroundLayer" parent="ParallaxBackground" index="5"]
scale = Vector2(3.33969, 3.34325)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" parent="ParallaxBackground/GroundLayer" index="0"]
texture = ExtResource("8_awxa6")

[node name="DreamPlatforms" type="Node2D" parent="."]

[node name="DreamPlatform1" type="Sprite2D" parent="DreamPlatforms"]
position = Vector2(200, 400)

[node name="DreamPlatform2" type="Sprite2D" parent="DreamPlatforms"]
position = Vector2(400, 350)

[node name="Key" type="Sprite2D" parent="DreamPlatforms"]
position = Vector2(600, 300)

[node name="RealPlatforms" type="Node2D" parent="."]

[node name="RealPlatform1" type="Sprite2D" parent="RealPlatforms"]
position = Vector2(300, 500)

[node name="RealPlatform2" type="Sprite2D" parent="RealPlatforms"]
position = Vector2(500, 450)

[node name="Door" type="Sprite2D" parent="RealPlatforms"]
position = Vector2(800, 250)

[node name="Enemies" type="Node2D" parent="."]

[node name="SwitchButton" type="Node2D" parent="."]
position = Vector2(100, 200)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-36, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(1984, 1080)
shape = SubResource("RectangleShape2D_8rshe")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(-19.9999, 18)
scale = Vector2(4.00948, 0.680976)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(1984, 1080)
shape = SubResource("RectangleShape2D_8rshe")

[node name="Player" parent="." instance=ExtResource("12_wvjco")]
position = Vector2(30, 716)

[editable path="ParallaxBackground"]
